<resources>

    <!--Nazvy-->
    <string name="app_name">ScedNote</string>
    <string name="note_tit">Úlohy</string>
    <string name="scr_tit">Nastavenie pozadia</string>
    <string name="sub_tit">Predmety</string>
    <string name="sced_tit">Nastavenie rozvrhu</string>
    <string name="les_edit_tit">Nastavenia hodiny</string>
    <string name="les_new_tit">Nová hodina</string>
    <string name="sub_edit_tit">Nastavenia predmetu</string>
    <string name="sub_new_tit">Nový predmet</string>

    <!--Tlačidlá-->
    <string name="nw">Nový</string>
    <string name="edit">Upraviť</string>
    <string name="del">Vymazať</string>
    <string name="merge">Zlúčiť</string>
    <string name="update">Aktualizovať</string>
    <string name="save">Uložiť</string>

    <string name="continue_">Pokračovať</string>
    <string name="confirm">Potvrdiť</string>
    <string name="cancel">Zrušiť</string>
    <string name="back">Späť</string>

    <string name="Mon">Pondelok</string>
    <string name="Tue">Utorok</string>
    <string name="Wed">Streda</string>
    <string name="Thu">Štvrtok</string>
    <string name="Fri">Piatok</string>

    <!--Validacia textu-->
    <string name="cannot_be_empty">Zadajte text!</string>
    <string name="text_too_long">Text je príliš dlhý!</string>
    <string name="text_too_short">Text je príliš krátky!</string>
    <string name="invalid_chars">Nepovolené znaky!</string>

    <!--NEPOUŽITÉ-->
    <string name="icon_sced_desc">Správa rozvrhu</string>
    <string name="icon_scr_desc">Vytvoriť tapetu</string>

    <!--Main-->
    <string name="clean_up_msg">Predmety, ktoré nie sú v rozvrhu a nie su k nim ani pripnuté úlohy a úlohy, ktorých čas už vypršal, budú odstránené. Prajete si pokračovať?</string>
    <string name="obsolete_subjects_gone">Nadbytočné predmety boli odstránené!</string>
    <string name="remove_obsolete">Odstrániť nepotrebné dáta</string>
    <string name="this_week">Tento týždeň</string>
    <string name="subjects">Predmety</string>
    <string name="notes">Úlohy</string>

    <!--Scedule-->
    <string name="lessonP">Prednáška</string>
    <string name="lessonC">Cvičenie</string>
    <string name="taken_over">Obsadené</string>

    <!--Screenshot-->
    <string name="Hsla">Odtieň</string>
    <string name="hSla">Sýtosť</string>
    <string name="hsLa">Svetlosť</string>
    <string name="hslA">Alfa</string>
    <string name="bgB">Pozadie</string>
    <string name="bgH">Hlavička</string>
    <string name="bgP">Prednášky</string>
    <string name="bgC">Cvičenia</string>
    <string name="Cover">Vyplniť</string>
    <string name="Contain">Zmestiť</string>
    <string name="Fill">Roztiahnúť</string>
    <string name="permission_denied">Zamietnutý prístup!</string>
    <string name="image_loading_error">Pokus o načítanie obrázku zlyhal</string>
    <string name="wallpaper_set_success">Obrázok bol pridaný na pozadie</string>

    <!--Lesson setter-->
    <string name="day">Deň</string>
    <string name="time">Čas</string>
    <string name="duration">Trvanie [h]</string>
    <string name="subName">Predmet</string>
    <string name="sort">Forma výučby</string>
    <string name="room">Miestnosť</string>
    <string name="les_collision">Práve sa chystáte nahradiť obsadenú časť rozvrhu. Chcete pokračovať?</string>

    <!--Predmety-->
    <string name="sub_full">Celý názov predmetu</string>
    <string name="sub_abb">Skratka</string>
    <string name="same_abb">Predmet s touto skratkou už existuje. Chcete ich zlúčiť?</string>
    <string name="used_abb">Predmet s touto skratkou už existuje. Chcete upraviť pôvodný?</string>
    <string name="subject_not_obsolete">Predmet a úlohy pripnuté k nemu sa navždy odstránia. Chcete pokračovať?</string>

    <!--Úlohy-->
    <string name="subject_related">Predmet</string>
    <string name="today">Dnes</string>
    <string name="tomorrow">Zajtra</string>
    <string name="forever">Bez termínu</string>
    <string name="late">Oneskrené</string>
    <string name="time_out">Čas vypršal</string>
    <string name="set_datetime">Zvoliť dátum a čas</string>
    <string name="clear_datetime">odstrániť dátum a čas</string>
    <string name="collapse">skryť</string>
    <string name="no_recent_notes">Žiadne úlohy</string>
    <string name="no_subject_no_note">Pre zaznamenanie úlohy z daného predmetu je nutné, aby existoval aspoň 1 predmet!</string>
    <string name="category_expired">Úloha už nepatrí do tejto kategórie! Bola presunutá!</string>
    <string name="disable">Vypnúť</string>
    <string name="minutes">Minúty</string>
    <string name="hours">Hodiny</string>
    <string name="days">Dni</string>
    <string name="notify_on_time">Predstih upozornení</string>
    <string name="note_not_on_list">Poznámka sa v zozname už nenachádza!</string>
    <string name="informácie">info</string>
    <string name="mikrofón">mic</string>
    <string name="voice_inst_heading">Hlasové inštrukcie</string>
    <string name="voice_inst_optimize">Uvoľniť</string>
    <string name="voice_inst_optimize_info">Odstráni nadbytočné dáta</string>
    <string name="voice_inst_design">Grafika</string>
    <string name="voice_inst_design_info">Presun na úpravy dizajnu</string>
    <string name="voice_inst_subjects">Predmety</string>
    <string name="voice_inst_subjects_info">Zoznam predmetov</string>
    <string name="voice_inst_schedule">Rozvrh</string>
    <string name="voice_inst_scedule_info">Zoznam hodín</string>
    <string name="voice_inst_notes">Úlohy</string>
    <string name="voice_inst_notes_info">Zoznam úloh</string>
    <string name="voice_inst_sub">[Celý názov predmetu]</string>
    <string name="voice_inst_sub_info">Zoznam úloh z daného predmetu</string>
    <string name="give_an_order">Vyslovte pokyn</string>
    <string name="no_speech">Rozpoznávanie hlasu nie je k dispozícii</string>
    <string name="press_to_command">Stlačte mikrofón a dajte pokyn!</string>
    <string name="voice_not_captured">Hlas nebol zachytený!</string>
    <string name="unspecified_command">Neznámy pokyn</string>
    <string name="voice_err_server">Offline slovník je nedostupný. Pripojte sa prosím na internet!</string>
    <string name="voice_err_network">Skontrolujte pripojenie na internet, prosím!</string>
    <string name="voice_err_busy">Už sa nahráva</string>
    <string name="voice_err_no_match">Nerozumiem!</string>
    <string name="voice_err_permissions">Nedostatočné povolenia</string>
    <string name="voice_err_client">Chyba na strane klienta. Skontrolujte prosím nastavenia svojho zariadenia.</string>
    <string name="voice_err_audio">Chyba zvuku</string>
    <string name="voice_err_unavailable">Hlasové služby sú blokované!</string>
    <string name="voice_inst_day_of_week">[Deň v týždni]</string>
    <string name="voice_inst_day_of_week_info">Zoznam hodín pre konkrétny deň</string>
    <string name="wait_please">Spracováva sa!</string>
    <string name="voice_inst_home">Domov</string>
    <string name="voice_inst_home_info">Prejsť na hlavné okno</string>
    <string name="unshaken">Pre hlasové pokyny zatraste zariadením!</string>
</resources>
