<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgSced"
    tools:context="sk.scednote.Scedule">

    <HorizontalScrollView
        android:id="@+id/dayTabs"
        style="@style/horScrollNav"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Mon"
                style="@style/dayBtn"
                android:layout_height="match_parent"
                android:text="@string/Mon" />

            <Button
                android:id="@+id/Tue"
                style="@style/dayBtn"
                android:layout_height="match_parent"
                android:text="@string/Tue" />

            <Button
                android:id="@+id/Wed"
                style="@style/dayBtn"
                android:layout_height="match_parent"
                android:text="@string/Wed" />

            <Button
                android:id="@+id/Thu"
                style="@style/dayBtn"
                android:layout_height="match_parent"
                android:text="@string/Thu" />

            <Button
                android:id="@+id/Fri"
                style="@style/dayBtn"
                android:layout_height="match_parent"
                android:text="@string/Fri" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scedList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="90dp"
        android:background="#6FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dayTabs"
        app:layout_constraintStart_toStartOf="@+id/dayTabs"
        app:layout_constraintTop_toBottomOf="@+id/dayTabs" />

    <Button
        android:id="@+id/addLesson"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/add"
        android:elegantTextHeight="false"
        android:gravity="center"
        android:textIsSelectable="false"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>