<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/hideInfo"
            style="@style/dp40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="#0000"
            android:contentDescription="@string/collapse"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/info"
            style="@style/dp40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/informácie"
            app:srcCompat="@android:drawable/ic_menu_info_details" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prevCmd"
            style="@style/dp40"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/des_courses"
            android:src="@drawable/prev"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/press_to_command"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/nextCmd"
            style="@style/dp40"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/des_courses"
            android:src="@drawable/next"
            android:visibility="gone"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <ImageView
        android:id="@+id/mic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="8dp"
        android:contentDescription="@string/mikrofón"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />

</LinearLayout>