<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/noteScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:background="@drawable/pin7days_dark"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/note_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pin7days_dark"
        android:backgroundTintMode="src_in"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/note_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="4dp"
            android:text="@string/this_week"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/reloader"
            style="@style/dp40"
            android:layout_margin="0dp"
            android:background="#0000"
            android:contentDescription="@string/update"
            android:src="@android:drawable/stat_notify_sync" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/no_recent_notes"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="4dp"
        android:layout_weight="1" />

</LinearLayout>
