<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgNotes"
    tools:context="sk.scednote.activities.NoteList">

    <HorizontalScrollView
        android:id="@+id/noteTabs"
        style="@style/horScrollNav"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/noteList"
        app:layout_constraintStart_toStartOf="@+id/noteList"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/subject_related"
                style="@style/dayBtn"
                android:layout_width="wrap_content"
                android:background="@drawable/cat_btns"
                android:backgroundTintMode="src_in"
                android:text="@string/subject_related" />

            <Button
                android:id="@+id/today"
                style="@style/dayBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/cat_btns"
                android:backgroundTint="@color/inactiveNoteTab"
                android:backgroundTintMode="src_in"
                android:text="@string/today" />

            <Button
                android:id="@+id/tomorrow"
                style="@style/dayBtn"
                android:layout_width="wrap_content"
                android:background="@drawable/cat_btns"
                android:backgroundTint="@color/inactiveNoteTab"
                android:backgroundTintMode="src_in"
                android:text="@string/tomorow" />

            <Button
                android:id="@+id/forever"
                style="@style/dayBtn"
                android:layout_height="match_parent"
                android:background="@drawable/cat_btns"
                android:backgroundTint="@color/inactiveNoteTab"
                android:backgroundTintMode="src_in"
                android:text="@string/forever" />

            <Button
                android:id="@+id/late"
                style="@style/dayBtn"
                android:layout_height="match_parent"
                android:background="@drawable/cat_btns"
                android:backgroundTint="@color/inactiveNoteTab"
                android:backgroundTintMode="src_in"
                android:text="@string/late" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subjectTabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/noteList"
        app:layout_constraintStart_toStartOf="@+id/noteList"
        app:layout_constraintTop_toBottomOf="@+id/noteTabs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noteList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="#1fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectTabs" />

</androidx.constraintlayout.widget.ConstraintLayout>