<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#0000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="#AFFF">

        <LinearLayout
            android:id="@+id/abb_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sub_abb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:singleLine="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/sub_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/datetimeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/detail"
            app:layout_constraintStart_toEndOf="@+id/addDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/editDetail"
            app:layout_constraintEnd_toStartOf="@+id/saveNote"
            app:layout_constraintStart_toEndOf="@+id/abb_zone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveNote"
            app:layout_constraintStart_toEndOf="@+id/abb_zone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDetailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:scrollbarSize="0dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/addDate"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="#0000"
            android:contentDescription="@string/set_datetime"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/detail"
            app:layout_constraintStart_toEndOf="@+id/abb_zone"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <ImageButton
            android:id="@+id/clearDate"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="#0000"
            android:contentDescription="@string/clear_datetime"
            android:foregroundGravity="bottom|right"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/detail"
            app:layout_constraintStart_toEndOf="@+id/datetimeDisplay"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <ImageButton
            android:id="@+id/editNote"
            style="@style/dp40"
            android:background="#0000"
            android:contentDescription="@string/edit"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/removeNote"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/removeNote"
            style="@style/dp40"
            android:background="#0000"
            android:contentDescription="@string/del"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_delete" />

        <ImageButton
            android:id="@+id/saveNote"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="#0000"
            android:contentDescription="@string/save"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editNote"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>